==> MizWong/SRT_1_0/01_Terminal/WSN/02_Program/WSN_STM32F407_uCOSii/EvalBoards/ST/STM3240G-EVAL/BSP/bsp.c <==
#define   BSP_MODULE
#include  <bsp.h>
#include  <bsp_os.h>
#define  BSP_BIT_RCC_PLLCFGR_PLLM               25u
#define  BSP_BIT_RCC_PLLCFGR_PLLN              336u
#define  BSP_BIT_RCC_PLLCFGR_PLLP                2u
#define  BSP_BIT_RCC_PLLCFGR_PLLQ                7u
#define  BSP_GPIOG_LED1                        DEF_BIT_06
#define  BSP_GPIOG_LED2                        DEF_BIT_08
#define  BSP_GPIOI_LED3                        DEF_BIT_09
#define  BSP_GPIOC_LED4                        DEF_BIT_07
#define  BSP_REG_DEM_CR                       (*(CPU_REG32 *)0xE000EDFC)
#define  BSP_REG_DWT_CR                       (*(CPU_REG32 *)0xE0001000)
#define  BSP_REG_DWT_CYCCNT                   (*(CPU_REG32 *)0xE0001004)
#define  BSP_REG_DBGMCU_CR                    (*(CPU_REG32 *)0xE0042004)
#define  BSP_DBGMCU_CR_TRACE_IOEN_MASK                   0x10
#define  BSP_DBGMCU_CR_TRACE_MODE_ASYNC                  0x00
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_01                0x40
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_02                0x80
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_04                0xC0
#define  BSP_DBGMCU_CR_TRACE_MODE_MASK                   0xC0
#define  BSP_BIT_DEM_CR_TRCENA                    DEF_BIT_24
#define  BSP_BIT_DWT_CR_CYCCNTENA                 DEF_BIT_00

void  BSP_Init (void)
{
    BSP_IntInit();
    
    RCC_DeInit();
    RCC_HSEConfig(RCC_HSE_ON);                                  /* HSE = 25MHz ext. crystal.                            */
    RCC_WaitForHSEStartUp();
    
    RCC_HCLKConfig(RCC_SYSCLK_Div1);                            /* HCLK    = AHBCLK  = PLL / AHBPRES(1) = 168MHz.       */
    RCC_PCLK2Config(RCC_HCLK_Div2);                             /* APB2CLK = AHBCLK  / APB2DIV(2)       = 84MHz.        */
    RCC_PCLK1Config(RCC_HCLK_Div4);                             /* APB1CLK = AHBCLK  / APB1DIV(4)       = 42MHz (max).  */
    
                                                                /* PLLCLK    = HSE * (PLLN / PLLM)      = 336MHz.       */
                                                                /* SYSCLK    = PLLCLK / PLLP            = 168MHz.       */
                                                                /* OTG_FSCLK = PLLCLK / PLLQ            =  48MHz.       */ 
    RCC_PLLConfig(RCC_PLLCFGR_PLLSRC_HSE,
                  BSP_BIT_RCC_PLLCFGR_PLLM,
                  BSP_BIT_RCC_PLLCFGR_PLLN, 
                  BSP_BIT_RCC_PLLCFGR_PLLP, 
                  BSP_BIT_RCC_PLLCFGR_PLLQ);
    
    RCC_PLLCmd(ENABLE);
    
    while (RCC_GetFlagStatus(RCC_FLAG_PLLRDY) == RESET) {       /* Wait for PLL to lock.                                */
        ;
    }
    
    FLASH_SetLatency(FLASH_Latency_5);                          /* 5 Flash wait states when HCLK > 120MHz.              */
    FLASH_PrefetchBufferCmd(ENABLE);
    
    RCC_SYSCLKConfig(RCC_SYSCLKSource_PLLCLK);                  /* HCLK = SYSCLK = PLL = 168MHz.                        */
    while (RCC_GetSYSCLKSource() != RCC_CFGR_SWS_PLL) {
        ;
    }
    
//    BSP_LED_Init();                                             /* Init LEDs.                                           */
    
#ifdef TRACE_EN                                                 /* See project / compiler preprocessor options.         */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_IOEN_MASK;    /* Enable tracing (see Note #2).                        */
    BSP_CPU_REG_DBGMCU_CR &= ~BSP_DBGMCU_CR_TRACE_MODE_MASK;    /* Clr trace mode sel bits.                             */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_MODE_SYNC_04; /* Cfg trace mode to synch 4-bit.                       */
#endif
}

CPU_INT32U  BSP_CPU_ClkFreq (void)
{
    RCC_ClocksTypeDef  rcc_clocks;


    RCC_GetClocksFreq(&rcc_clocks);
    return ((CPU_INT32U)rcc_clocks.HCLK_Frequency);
}

static void  BSP_LED_Init()
{
    GPIO_InitTypeDef  gpio_init;


    BSP_PeriphEn(BSP_PERIPH_ID_GPIOG);                          /* Configure GPIOG for LED1 and LED2                    */

    gpio_init.GPIO_Pin   = BSP_GPIOG_LED1 | BSP_GPIOG_LED2;
    gpio_init.GPIO_Mode  = GPIO_Mode_OUT;
    gpio_init.GPIO_OType = GPIO_OType_PP;
    gpio_init.GPIO_PuPd  = GPIO_PuPd_UP;
    gpio_init.GPIO_Speed = GPIO_Speed_50MHz;

    GPIO_Init(GPIOG, &gpio_init);

    
    BSP_PeriphEn(BSP_PERIPH_ID_GPIOI);                          /* Configure GPIOI for LED3                             */

    gpio_init.GPIO_Pin = BSP_GPIOI_LED3;

    GPIO_Init(GPIOI, &gpio_init);

    
    BSP_PeriphEn(BSP_PERIPH_ID_GPIOC);                          /* Configure GPIOC for LED4                             */

    gpio_init.GPIO_Pin = BSP_GPIOC_LED4; 

    GPIO_Init(GPIOC, &gpio_init);
}

void  BSP_LED_On (CPU_INT08U  led)
{
    switch (led) {
        case 0:
             GPIO_SetBits(GPIOG, (BSP_GPIOG_LED1 | BSP_GPIOG_LED2));
             GPIO_SetBits(GPIOI, BSP_GPIOI_LED3);
             GPIO_SetBits(GPIOC, BSP_GPIOC_LED4);
             break;

        case 1:
             GPIO_SetBits(GPIOG, BSP_GPIOG_LED1);
             break;

        case 2:
             GPIO_SetBits(GPIOG, BSP_GPIOG_LED2);
             break;

        case 3:
             GPIO_SetBits(GPIOI, BSP_GPIOI_LED3);
             break;
             
        case 4:
             GPIO_SetBits(GPIOC, BSP_GPIOC_LED4);
             break;             

        default:
             break;
    }
}

void  BSP_LED_Off (CPU_INT08U led)
{
    switch (led) {
        case 0:
             GPIO_ResetBits(GPIOG, (BSP_GPIOG_LED1 | BSP_GPIOG_LED2));
             GPIO_ResetBits(GPIOI, BSP_GPIOI_LED3);
             GPIO_ResetBits(GPIOC, BSP_GPIOC_LED4);
             break;

        case 1:
             GPIO_ResetBits(GPIOG, BSP_GPIOG_LED1);
             break;

        case 2:
             GPIO_ResetBits(GPIOG, BSP_GPIOG_LED2);
             break;

        case 3:
             GPIO_ResetBits(GPIOI, BSP_GPIOI_LED3);
             break;
             
        case 4:
             GPIO_ResetBits(GPIOC, BSP_GPIOC_LED4);
             break;             

        default:
             break;
    }
}

void  BSP_LED_Toggle (CPU_INT08U  led)
{
    CPU_INT32U  pins;


    switch (led) {
        case 0:
             pins  =  GPIO_ReadOutputData(GPIOG);
             pins ^= (BSP_GPIOG_LED1 | BSP_GPIOG_LED2);
             GPIO_SetBits(  GPIOG,   pins  & (BSP_GPIOG_LED1 | BSP_GPIOG_LED2));
             GPIO_ResetBits(GPIOG, (~pins) & (BSP_GPIOG_LED1 | BSP_GPIOG_LED2));

             pins  =  GPIO_ReadOutputData(GPIOI);
             pins ^= BSP_GPIOI_LED3;
             GPIO_SetBits(  GPIOI,   pins  & BSP_GPIOI_LED3);
             GPIO_ResetBits(GPIOI, (~pins) & BSP_GPIOI_LED3);
             
             pins  =  GPIO_ReadOutputData(GPIOC);
             pins ^= BSP_GPIOC_LED4;
             GPIO_SetBits(  GPIOC,   pins  & BSP_GPIOC_LED4);
             GPIO_ResetBits(GPIOC, (~pins) & BSP_GPIOC_LED4);
             break;

        case 1:
             pins  = GPIO_ReadOutputData(GPIOG);
             pins ^= BSP_GPIOG_LED1;
             GPIO_SetBits(  GPIOG,   pins  & BSP_GPIOG_LED1);
             GPIO_ResetBits(GPIOG, (~pins) & BSP_GPIOG_LED1);
             break;
             
        case 2:
             pins  = GPIO_ReadOutputData(GPIOG);
             pins ^= BSP_GPIOG_LED2;
             GPIO_SetBits(  GPIOG,   pins  & BSP_GPIOG_LED2);
             GPIO_ResetBits(GPIOG, (~pins) & BSP_GPIOG_LED2);
             break;
             
        case 3:
             pins  =  GPIO_ReadOutputData(GPIOI);
             pins ^= BSP_GPIOI_LED3;
             GPIO_SetBits(  GPIOI,   pins  & BSP_GPIOI_LED3);
             GPIO_ResetBits(GPIOI, (~pins) & BSP_GPIOI_LED3);
             break;
             
        case 4:
             pins  =  GPIO_ReadOutputData(GPIOC);
             pins ^= BSP_GPIOC_LED4;
             GPIO_SetBits(  GPIOC,   pins  & BSP_GPIOC_LED4);
             GPIO_ResetBits(GPIOC, (~pins) & BSP_GPIOC_LED4);
             break;

        default:
             break;
    }
}
